@@ -1,3 +1,6 @@
+2003-02-28	fabian
+    * Fixed a bug that cause incorrect screen update
+    
 2003-02-27	fabian
     * Fixed cursor code in ARRAY mode
     * Fixed more double-width character stuff in ARRAY mode, 
